// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generate (cjs) basic generates the documentation 1`] = `
"# eslint-plugin-test

<!-- begin auto-generated rules list -->

| Name                           | Description   |
| :----------------------------- | :------------ |
| [no-foo](docs/rules/no-foo.md) | disallow foo. |

<!-- end auto-generated rules list -->
"
`;

exports[`generate (cjs) basic generates the documentation 2`] = `
"# Disallow foo (\`test/no-foo\`)

<!-- end auto-generated rule header -->
"
`;

exports[`generate (cjs) config that extends another config generates the documentation 1`] = `
"# eslint-plugin-test

## Rules

<!-- begin auto-generated rules list -->

💼 Configurations enabled in.\\
✅ Set in the \`recommended\` configuration.

| Name                           | Description            | 💼 |
| :----------------------------- | :--------------------- | :- |
| [no-bar](docs/rules/no-bar.md) | Description of no-bar. | ✅  |
| [no-baz](docs/rules/no-baz.md) | Description of no-baz. | ✅  |
| [no-biz](docs/rules/no-biz.md) | Description of no-biz. | ✅  |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. | ✅  |

<!-- end auto-generated rules list -->
"
`;

exports[`generate (cjs) config that extends another config generates the documentation 2`] = `
"# Description of no-foo (\`test/no-foo\`)

💼 This rule is enabled in the ✅ \`recommended\` config.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (cjs) config that extends another config generates the documentation 3`] = `
"# Description of no-bar (\`test/no-bar\`)

💼 This rule is enabled in the ✅ \`recommended\` config.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (cjs) config that extends another config generates the documentation 4`] = `
"# Description of no-baz (\`test/no-baz\`)

💼 This rule is enabled in the ✅ \`recommended\` config.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (cjs) config that extends another config generates the documentation 5`] = `
"# Description of no-biz (\`test/no-biz\`)

💼 This rule is enabled in the ✅ \`recommended\` config.

<!-- end auto-generated rule header -->
"
`;
